# python_labs

./: README.md
csharp/data/lab04/: a  args  b  input  report.csv  report_per_file.csv  report_total.csv  text
csharp/data/samples/: people.csv  people.json
csharp/src/lab03/: Program.cs  README.md  TextCases.cs  TextStats.cs  lab03.csproj
csharp/src/lab04/: IOTxtCsv.cs  Program.cs  README.md  lab04.csproj
csharp/src/lab05/: CsvXlsx.cs  (+4 more)
python/: pyproject.toml
python/data/lab04/: a.txt  b.txt  input.txt  report.csv  report_per_file.csv
python/data/lab09/: students.csv
python/data/samples/: cities.csv  people.xlsx
python/src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  06.py  07.py  README.md
python/src/lab02/: README.md  arrays.py  matrix.py  tuples.py
python/src/lab03/: README.md  cases.py  stats.py  test_cases.py  text_stats.py
python/src/lab04/: README.md  io_txt_csv.py  text_report.py
python/src/lab05/: README.md  csv_xlsx.py  json_csv.py
python/src/lab06/: README.md  cli_convert.py  cli_text.py
python/src/lab07/: README.md
python/src/lab08/: README.md  models.py  serialize.py
python/src/lab09/: README.md  group.py
python/src/lab10/: README.md  linked_list.py  structures.py
python/src/lib/: arrays.py  constants.py  io_helper.py  matrix.py  table.py  text.py  tuples.py
python/src/lib03/: text_stats.py
python/tests/: test_collections.py  test_json_csv.py  test_text.py
src/lab01/: 02_sum_avg.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06.py  07.py
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
(+5 files in other folders)
