[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python_labs"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "black>=24.0",
    "ruff>=0.6",
    "openpyxl>=3.1.5",
    "pytest-benchmark>=5.2.3"
]
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"


[tool.black]
line-length = 88
target-version = ["py313"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/csv_xlsx.py",
    "*/arrays.py",
    "*/matrix.py",
    "*/io_txt_csv.py",
    "*/text_report.py",
    "*/tuples.py",
    "*/lib/io_helper.py*",
    "*/table.py",
    "*/cases.py",
    "*/stats.py",
    "*/__init__.py"
]